--- a/test.ipynb
+++ b/test.ipynb
@@ -121,7 +121,7 @@
     "openai.api_type = \"azure\"\n",
     "openai.api_base = \"https://openai-remmey.openai.azure.com/\"\n",
     "openai.api_version = \"2022-12-01\"\n",
-    "openai.api_key = '86088fc384d04509a739288a54fea2f1'\n",
+    "openai.api_key = ''\n",
     "summary_string = \"\"\n",
     "previous_summary =\"\"\n",
     "\n",
